--- a/04_10_2019/py_cop_04_10_2019.ipynb
+++ b/04_10_2019/py_cop_04_10_2019.ipynb
@@ -1077,16 +1077,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "CompletedProcess(args='pwd', returncode=0, stdout=b'/home/gjklv8/repos/advanced_python_cop\\n', stderr=b'')"
+       "CompletedProcess(args='pwd', returncode=0, stdout=b'/home/rs/repos/advanced-python-course/04_10_2019\\n', stderr=b'')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1197,7 +1197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_ is just an identifier. The same as grades. It's a common practice to use _ when you want to ignore some value"
+    "`_` is just an identifier. The same as grades. It's a common practice to use _ when you want to ignore some value"
    ]
   },
   {
@@ -1852,7 +1852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1872,7 +1872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1881,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1890,7 +1890,7 @@
        "'B'"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1901,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1911,7 +1911,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-79-e27186f28a17>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-24-e27186f28a17>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m: 'B' object has no attribute 'x'"
      ]
     }
@@ -1922,7 +1922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1931,7 +1931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1940,7 +1940,7 @@
        "10"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1958,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1967,7 +1967,7 @@
        "'A'"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1979,32 +1979,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a.f = A.f"
+    "a.f = B.f"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "f() missing 1 required positional argument: 'self'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-84-4b5cb18d8b59>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: f() missing 1 required positional argument: 'self'"
-     ]
+     "data": {
+      "text/plain": [
+       "'B'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.f()"
+    "a.f(a)"
    ]
   },
   {
@@ -2018,7 +2017,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python has to compute the same value in an loop, because you could change the function from different thread:"
+    "Python has to compute the same value in a loop, because you could change the function from different thread:"
    ]
   },
   {
@@ -2078,9 +2077,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Doing work\n",
+      "Execution time:  0:00:00.301811\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "\n",
@@ -2159,7 +2167,7 @@
     "    func()\n",
     "    print(\"Execution time: \", datetime.now() - now)\n",
     "\n",
-    "    # TODO: make it simpler\n",
+    "\n",
     "def execution_time_printed(func):\n",
     "    return lambda: call_and_print_time(func)\n",
     "\n",
@@ -2485,6 +2493,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That's how all decorators with arguments should be implemented:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
@@ -2704,7 +2719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2731,7 +2746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2740,7 +2755,7 @@
        "{'id': 0, 'name': 'Janusz'}"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2751,7 +2766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2760,13 +2775,20 @@
        "{'id': 1, 'name': 'Guido'}"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "vars(Person('Guido'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example of class decorator from standard library - dataclass."
    ]
   },
   {
@@ -2830,7 +2852,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inheritance with decorator :D"
+    "Inheritance with decorator :D (Don't do this)"
    ]
   },
   {
