Add table of contents

--- a/04_10_2019/py_cop_04_10_2019.ipynb
+++ b/04_10_2019/py_cop_04_10_2019.ipynb
@@ -15,6 +15,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Table of contents:\n",
+    "* Tools\n",
+    "* General tips\n",
+    "* Comprehensions vs filter/map\n",
+    "* String formatting\n",
+    "* All asterisk usecase\n",
+    "* Everything is an object\n",
+    "* Duck typing\n",
+    "* Monkey patching\n",
+    "* Decorators\n",
+    "* Memoization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Python is a religion almost as popular as Islam"
    ]
   },
