--- a/11_10_2019/generators_contextlib.ipynb
+++ b/11_10_2019/generators_contextlib.ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Advanced python CoP"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Table of contents:\n",
+    "* Iter protocl\n",
+    "* Generators\n",
+    "* Contextlib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Iter protocol"
@@ -52,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,9 +83,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'Counter' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-195ccddbe93a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mCounter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'Counter' object is not iterable"
+     ]
+    }
+   ],
    "source": [
     "for value in Counter():\n",
     "    print(value)"
@@ -79,9 +112,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "it = iter([1, 2, 3])\n",
     "try:\n",
@@ -173,7 +216,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Why is this information useful? Infinite or very large sequences. Problem: find first fibonaci sequence number which has a sum of digits greater than 100"
+    "Why is this information useful? Infinite or very large sequences.  \n",
+    "Problem: find first fibonaci sequence number which has a sum of digits greater than 100"
    ]
   },
   {
@@ -954,7 +998,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Common generator mistakes:"
+    "### Common generator pitfalls:"
    ]
   },
   {
@@ -1148,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,28 +1218,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20G\t/home/gjklv8/faster_xml.xml\r\n"
+      "19G\t/home/rs/big.xml\r\n"
      ]
     }
    ],
    "source": [
-    "! du -hs ~/faster_xml.xml"
+    "! du -hs ~/big.xml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tags = iter_tags_from_xml_file(Path(\"/home/gjklv8/faster_xml.xml\"))"
+    "tags = iter_tags_from_xml_file(Path(\"/home/rs/big.xml\"))"
    ]
   },
   {
@@ -1235,7 +1279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We counted keybox tags in 20GB xml file with just a couple of KB."
+    "We counted keybox tags in 17GB xml file with just a couple of KB."
    ]
   },
   {
@@ -1246,11 +1290,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We need some test data. Let's generate it using python"
+   ]
   },
   {
    "cell_type": "code",
