Add contextlib continuation

--- a/11_10_2019/generators_contextlib.ipynb
+++ b/11_10_2019/generators_contextlib.ipynb
@@ -2188,6 +2188,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "File cannot be opened after closing:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 140,
    "metadata": {},
@@ -2223,26 +2230,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1,), (2,)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sqlite3\n",
     "db = sqlite3.connect(\":memory:\")\n",
+    "db.execute(\"\"\"\n",
+    "CREATE TABLE numbers (\n",
+    "   number INTEGER\n",
+    ");\n",
+    "\"\"\")\n",
     "with db:\n",
-    "    db.execute(\"\")\n",
-    "    db.execute(\"\")"
+    "    db.execute(\"INSERT INTO numbers values (1);\")\n",
+    "    db.execute(\"INSERT INTO numbers values (2);\")\n",
+    "list(db.execute(\"SELECT * from numbers\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "table numbers has 1 columns but 2 values were supplied",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-ab390297438e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"INSERT INTO numbers values (3);\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"INSERT INTO numbers values ('should fail', 2);\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m: table numbers has 1 columns but 2 values were supplied"
+     ]
+    }
+   ],
    "source": [
     "with db:\n",
-    "    db.execute(\"\")\n",
-    "    db.execute(\"\")"
+    "    db.execute(\"INSERT INTO numbers values (3);\")\n",
+    "    db.execute(\"INSERT INTO numbers values ('should fail', 2);\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1,), (2,)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(db.execute(\"SELECT * from numbers\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It works, adding number 3 was rolled back"
    ]
   },
   {
@@ -2399,11 +2462,226 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### contextlib.closing - calls .close() on exit"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'<!doctype html>\\n'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from contextlib import closing\n",
+    "from urllib.request import urlopen\n",
+    "\n",
+    "page = urlopen('http://www.python.org')\n",
+    "try:\n",
+    "    print(next(page))\n",
+    "finally:\n",
+    "    page.close()\n",
+    "\n",
+    "page.isclosed()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'<!doctype html>\\n'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from contextlib import closing\n",
+    "from urllib.request import urlopen\n",
+    "\n",
+    "with closing(urlopen('http://www.python.org')) as page:\n",
+    "    print(next(page))\n",
+    "\n",
+    "page.isclosed()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### contextlib.supress - catches and ignores exception"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "try:\n",
+    "    raise ValueError()\n",
+    "except ValueError:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from contextlib import suppress\n",
+    "\n",
+    "with suppress(ValueError):\n",
+    "    raise ValueError()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### contextlib.redirect_stdout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Help on built-in function pow in module builtins:\\n\\npow(base, exp, mod=None)\\n    Equivalent to base**exp with 2 arguments or base**exp % mod with 3 arguments\\n    \\n    Some types, such as ints, are able to use a more efficient algorithm when\\n    invoked using the three argument form.\\n\\n'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from contextlib import redirect_stdout\n",
+    "import io\n",
+    "\n",
+    "f = io.StringIO()\n",
+    "with redirect_stdout(f):\n",
+    "    help(pow)\n",
+    "f.getvalue()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### contextlib.ContextDecorator - context manager that can be used as decorator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from contextlib import ContextDecorator\n",
+    "\n",
+    "class mycontext(ContextDecorator):\n",
+    "    def __enter__(self):\n",
+    "        print('Starting')\n",
+    "        return self\n",
+    "\n",
+    "    def __exit__(self, *exc):\n",
+    "        print('Finishing')\n",
+    "        return False\n",
+    "\n",
+    "@mycontext()\n",
+    "def function():\n",
+    "    print('The bit in the middle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting\n",
+      "The bit in the middle\n",
+      "Finishing\n"
+     ]
+    }
+   ],
+   "source": [
+    "function()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting\n",
+      "The bit in the middle\n",
+      "Finishing\n"
+     ]
+    }
+   ],
+   "source": [
+    "with mycontext():\n",
+    "    print('The bit in the middle')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### contextlib.ExitStack"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.rath.org/on-the-beauty-of-pythons-exitstack.html"
+   ]
   }
  ],
  "metadata": {
@@ -2422,7 +2700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0rc1"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
