Add 25/10/2019 course: tdd and doctest

--- a/wip/cop_materials.ipynb
+++ b/wip/cop_materials.ipynb
@@ -4,36 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Other useful contextlib members"
+    "### itertools"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "# TODO: multiple managers in one with"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# TODO: "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://docs.python.org/3/library/contextlib.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://www.rath.org/on-the-beauty-of-pythons-exitstack.html"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -426,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0rc1"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
