Minor fixes in 28_02

--- a/28_02_2020/py_cop_28_02_2020.ipynb
+++ b/28_02_2020/py_cop_28_02_2020.ipynb
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the version is not there, you can just build python binary from sources."
+    "If the version is not there, you still can build python binary from sources."
    ]
   },
   {
@@ -309,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "System wide:"
+    "#### System wide:"
    ]
   },
   {
@@ -342,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just for the current user:"
+    "#### Just for the current user:"
    ]
   },
   {
@@ -351,7 +351,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# python3.8 get-pip.py"
+    "# python3.8 get-pip.py --user"
    ]
   },
   {
@@ -438,7 +438,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Virtualenv - separate python for each project "
+    "# Virtualenv - separate python environment for each project "
    ]
   },
   {
@@ -724,13 +724,6 @@
     "- [virtualenvwrapper](https://virtualenvwrapper.readthedocs.io/en/latest/)\n",
     "- https://stackoverflow.com/questions/41573587/what-is-the-difference-between-venv-pyvenv-pyenv-virtualenv-virtualenvwrappe"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
