--- a/debugging_with_pdb/pdb.ipynb
+++ b/debugging_with_pdb/pdb.ipynb
@@ -67,6 +67,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Behave captures stdout, so you won't see pdb output, but there's a simple fix: `--no-capture`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "I could do a demo in ipython, but the callstack is a little cluttered and scrolling doesn't work well, so let's start the live demo in terminal."
    ]
   },
@@ -91,9 +98,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Extra: how to install pip package in docker image without rebuilding\n",
+    "- run the image\n",
+    "- if you're not root, attach new console as root: <shell>`docker exec -it -u 0 987dc2a426ff bash`\n",
+    "- <shell>`pip install pudb`\n",
+    "- commit the container: <shell>`docker commit 987dc2a426ff swdl/aosp:latest`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## There are a lot of pdb flavours:\n",
     "- ipdb -> pdb with ipython shell\n",
-    "- pubd -> ncurses version"
+    "- pudb -> ncurses version"
    ]
   },
   {
@@ -130,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -155,10 +173,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## remote-pdb <- for really pdb-hostile environments, like no TTY"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<python>`import rpdb; rpdb.set_trace()`\n",
+    "    \n",
+    "    \n",
+    "<shell>`$ nc 127.0.0.1 4444` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## django-pdb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## pytest\n",
+    "<shell>`pytest --pdb` <- lands in pdb on test failure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Best practice\n",
     "- most of the time you're probably better off with your IDE/editor debugger\n",
-    "- use something pdb-ish when it's hard to integrate IDE/editor debugger or integration is not worth the effort\n",
-    "- your editor can't debug python code"
+    "- use something pdb-ish when\n",
+    "    - it's hard/impossible to integrate IDE/editor debugger or integration is not worth the effort\n",
+    "    - your editor can't debug python code"
    ]
   }
  ],
@@ -178,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
